<?xml version="1.0"?>
<package format="2">
    <name>sim_stage</name>
    <version>0.0.1</version>
    <description>

        navigation simulate in stage

    </description>
    <author>lmr</author>
    <maintainer email="lmr2887@163.com">lmr</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>costmap_2d</depend>
    <depend>geometry_msgs</depend>
    <depend>std_msgs</depend>
    <depend>tf2_ros</depend>

</package>
