<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>voronoi_field</name>
    <version>0.1.0</version>
    <description>
        A costmap_2d plugins to create voronoi field of obstacles.
    </description>
    <author>lmr</author>
    <maintainer email="lmr2887@163.com">lmr</maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_modules</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>tf2_geometry_msgs</build_depend>
    <build_depend>tf2_sensor_msgs</build_depend>

    <depend>dynamic_reconfigure</depend>
    <depend>eigen</depend>
    <depend>geometry_msgs</depend>
    <depend>laser_geometry</depend>
    <depend>map_msgs</depend>
    <depend>message_filters</depend>
    <depend>nav_msgs</depend>
    <depend>pluginlib</depend>
    <depend>roscpp</depend>
    <depend>rostest</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>visualization_msgs</depend>
    <depend>voxel_grid</depend>
    <depend>costmap_2d</depend>

    <exec_depend>message_runtime</exec_depend>
    <exec_depend>rosconsole</exec_depend>
    <test_depend>map_server</test_depend>
    <test_depend>rosbag</test_depend>
    <test_depend>rostest</test_depend>
    <test_depend>rosunit</test_depend>

    <export>
      <costmap_2d plugin="${prefix}/costmap_plugins.xml"/>
    </export>
</package>
