<?xml version="1.0"?>
<package format="2">
  <name>navit_common</name>
  <version>0.0.0</version>
  <description>The navit common package</description>

  <maintainer email="czk@todo.todo">max</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>navit_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>rviz</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>navit_msgs</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>rviz</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>navit_msgs</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>rviz</exec_depend> 
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
